--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Typing Master for Developers by Mehedi Hasan</title>
+    <meta property="og:image" content="https://github.com/mehedimi/typing-v3/blob/master/src/images/og-image.png?raw=true" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
